[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/dice/dice_faces_side_transparent.png" type="Texture" id=1]
[ext_resource path="res://assets/dice/dice_colors.png" type="Texture" id=2]
[ext_resource path="res://assets/dice/dice_faces_transparent.png" type="Texture" id=3]
[ext_resource path="res://assets/dice/dice_faces_colors.png" type="Texture" id=4]
[ext_resource path="res://DiceAnimation.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]
resource_name = "Base"

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Old:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Old:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Old:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -5 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Old/OldNumber:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("OldFrontNumber:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("..:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../Left:offset")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Left:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../Left:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "to_right"
length = 1.2
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("../../CurrentFace:visible")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Old:scale")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.75, 1 ), Vector2( 0.5, 1 ), Vector2( 0.3, 1 ), Vector2( 0.1, 1 ), Vector2( 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Old:offset")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Vector2( -20, 0 ), Vector2( -20, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Old:position")
tracks/3/interp = 0
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20, -5 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Old/OldNumber:offset")
tracks/4/interp = 0
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -20, 0 ), Vector2( -20, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("OldFrontNumber:rotation_degrees")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 20.0, 45.0, 63.0, 81.0, 90.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("..:visible")
tracks/6/interp = 0
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../Left:scale")
tracks/7/interp = 0
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.7, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1 ), Vector2( 0.25, 1 ), Vector2( 0.5, 1 ), Vector2( 0.7, 1 ), Vector2( 0.9, 1 ), Vector2( 1, 1 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../Left:visible")
tracks/8/interp = 0
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="DiceAnimation" type="Node2D"]
position = Vector2( 332, 147 )
script = ExtResource( 5 )

[node name="NextFaceAnimation" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="OldFront" type="Sprite" parent="NextFaceAnimation"]
position = Vector2( 0, 25 )
texture = ExtResource( 2 )
offset = Vector2( 0, -25 )
hframes = 6
__meta__ = {
"_edit_lock_": true
}

[node name="OldFrontNumber" type="Sprite" parent="NextFaceAnimation/OldFront"]
position = Vector2( 0, -5 )
texture = ExtResource( 1 )
hframes = 6
vframes = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Bottom" type="Sprite" parent="NextFaceAnimation"]
visible = false
position = Vector2( 0, 25 )
texture = ExtResource( 2 )
offset = Vector2( 0, -25 )
hframes = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Number" type="Sprite" parent="NextFaceAnimation/Bottom"]
position = Vector2( 0, -5 )
texture = ExtResource( 1 )
hframes = 6
vframes = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Left" type="Sprite" parent="NextFaceAnimation"]
visible = false
position = Vector2( -20, -5 )
texture = ExtResource( 4 )
offset = Vector2( 20, 0 )
hframes = 6
vframes = 2
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Number" type="Sprite" parent="NextFaceAnimation/Left"]
texture = ExtResource( 3 )
offset = Vector2( 20, 0 )
hframes = 6
vframes = 2
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Right" type="Sprite" parent="NextFaceAnimation"]
visible = false
position = Vector2( 20, -5 )
texture = ExtResource( 4 )
offset = Vector2( -20, 0 )
hframes = 6
vframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Number" type="Sprite" parent="NextFaceAnimation/Right"]
texture = ExtResource( 3 )
offset = Vector2( -20, 0 )
hframes = 6
vframes = 2
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Top" type="Sprite" parent="NextFaceAnimation"]
visible = false
position = Vector2( 0, -25 )
texture = ExtResource( 4 )
offset = Vector2( 0, 20 )
hframes = 6
vframes = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Number" type="Sprite" parent="NextFaceAnimation/Top"]
texture = ExtResource( 3 )
offset = Vector2( 0, 20 )
hframes = 6
vframes = 2
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Old" type="Sprite" parent="NextFaceAnimation"]
position = Vector2( 0, -5 )
texture = ExtResource( 4 )
hframes = 6
vframes = 2
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="OldNumber" type="Sprite" parent="NextFaceAnimation/Old"]
texture = ExtResource( 3 )
hframes = 6
vframes = 2
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="CurrentFace" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Front" type="Sprite" parent="CurrentFace"]
position = Vector2( 0, 25 )
texture = ExtResource( 2 )
offset = Vector2( 0, -25 )
hframes = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Number" type="Sprite" parent="CurrentFace/Front"]
position = Vector2( 0, -5 )
texture = ExtResource( 1 )
hframes = 6
vframes = 4

[node name="Top" type="Sprite" parent="CurrentFace"]
position = Vector2( 0, -5 )
texture = ExtResource( 4 )
hframes = 6
vframes = 2
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Number" type="Sprite" parent="CurrentFace/Top"]
texture = ExtResource( 3 )
hframes = 6
vframes = 2
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../NextFaceAnimation/OldFront")
autoplay = "to_right"
anims/Base = SubResource( 1 )
anims/RESET = SubResource( 2 )
anims/to_right = SubResource( 3 )
